# rustfull-api

./: Cargo.toml  Dockerfile  docker-compose.yml
migrations/: 20231106165829_initial_db_setup.sql
src/: handler.rs  handlers.rs  main.rs
